prevent pic from getting too large at v large viewport width

--- a/src/assets/scss/03_organism/_team.scss
+++ b/src/assets/scss/03_organism/_team.scss
@@ -54,6 +54,7 @@
     &-image {
       display: flex;
       justify-content: center;
+      max-width: 691px;
       position: initial;
 
       @include breakpoints("tablet") {
